[DOC] article2: added edits after consultations
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article2/article.tex
+++ b/Documentation/i.palachev/Thesis/Article2/article.tex
@@ -47,8 +47,15 @@ $L_{\infty}$}
 Предложен новый алгоритм решения задачи согласования измерений опорной функции
 выпуклого тела в метрике $L_{\infty}$, позволяющий получить решение за
 квадратичное время по числу измерений без использования линейного
-программирования. Приведены детали реализации алгоритма и результаты его
-тестирования.
+программирования.
+Также доказана оценка скорости сходимости, которая имеет место при довольно
+слабых условиях на входные данные, что позволяет применить метод к более
+широкому классу задач, чем это было прежде.
+Доказанное свойство скорости сходимости позволяет утверждать, что разработанный
+и представленный в статье алгоритм обладает большей  и гарантированной
+стабильностью и предсказуемостью, нежели прочие алгоритмы, существовавшие и
+применявшиеся для согласования измерений опорной функции до сих пор.
+Приведены детали реализации алгоритма и результаты его тестирования.
 \end{abstract}
 
 \textbf{Ключевые слова:} опорная функция, восстановление геометрических тел,
@@ -61,8 +68,83 @@ $L_{\infty}$}
 \cite{PrinceWillsky}, для обработки данных лазерного радара
 \cite{LeleKulkarniWillsky}, в магнитно-резонансной визуализации
 \cite{GregorRannou2001, GregorRannou2002}, при построении трехмерных моделей
-драгоценных камней в ювелирной промышленности \cite{palachev}.
+драгоценных камней в ювелирной промышленности \cite{palachev} -- все эти
+прикладные задачи так или иначе сводятся к решению так называемой
+\textbf{задаче согласования измерений опорной функции выпуклого тела}
+(разъяснение этих понятий см. ниже).
 
+Во всех работах, посвященных решению задачи согласования, проблема сводилась к
+решению задачи квадратичного (для метрики $L_2$) или линейного (для метрик
+$L_1$ и $L_\infty$) программирования следующего вида:
+
+\begin{equation*}
+ ||h - h^0||_X \to \min \;\;\;\;\; s.t. \;\;\;\;\; C h \ge 0,
+\end{equation*}
+где $h^0$ -- исходные значения измерений опорной функции, $h$ -- неизвестные
+(переменные задачи), которые требуется найти, а $C$ -- линейная матрица.
+
+Основным камнем преткновения для решения данной задачи для измерений опорных
+функций тел в $\mathbb{R}^3$ являлся тот факт, что матрица $C$ содержит в себе
+квадратичное ($O(N^2)$, где $N$ -- размерность вектора $h$) число строк.
+
+Поэтому основным направлением исследования данной задачи в ряде работ было
+упрощение условий согласованности, что позволило бы записать задачу в более
+компактном виде и, следовательно, решить ее за гораздо меньшее время. Так, в
+работе \cite{GardnerKiderlen} была найдена возможность записи задачи
+программирования в более удобных терминах точек касания (до того времени само
+нахождение условий было нетривиальной задачей).
+
+Похожую цель преследовала и статья \cite{palachev}, основной результат которой
+позволил на большом классе входных данных избавиться примерно от 80\% условий
+(последняя оценка, впрочем, была выведена экспериментально). Тем не
+менее, это позволило лишь сдвинуть границу применимости метода, но так и не
+перевело его на уровень, который позволял бы применить его к любым входным
+данным.
+
+Следующей сложностью на пути решения задачи является довольно типичная для
+вычислительных методов ситуация, когда не существует алгоритма, который бы
+гарантированно работал для любых входных данных. Так, в мире существуют
+как коммерческие (лишь некоторые из которых доступны по академической лицензии),
+так и свободные программные пакеты для решения задач квадратичного или
+линейного программирования. Поскольку довольно понятным является желание
+пользователя иметь гарантированное поведение программного пакета, коммерческие
+пакеты, часто не раскрывающие особенности своей реализации (или оглашающие их
+лишь частично), не всегда могут быть для этого удовлетворительными.
+
+Свободные программные пакеты, такие как, например, Ipopt \cite{Ipopt},
+показавший себя довольно эффективным для решения данной задачи (см. подробности
+в \cite{palachev}), -- имеют открытый исходный код и основаны на результатах
+научных статей \cite{WachterBiegler, WachterBiegler2}, доказывающих
+свойства реализованных в них алгоритмов. Тем не менее, метод внутренней точки,
+являющийся основой реализации этого пакета, при всех его достоинствах
+имеет такой недостаток,
+что может впасть в режим восстановления, при котором существующие оценки
+скорости сходимости довольно скудны \cite {WachterBiegler2}.
+Иначе говоря, алгоритм, при наличии ряда неблагоприятных обстоятельств,
+может работать сколь угодно долго (если не ограничить число итераций), или
+может вообще не сойтись.
+
+В связи с этим возникает вопрос: \textbf{можно ли переформулировать задачу
+согласования опорных чисел таким образом, чтобы алгоритм решения имел
+гарантированную приемлемую скорость сходимости при любых входных данных?}
+
+Данная работа призвана представить такой алгоритм для задачи в метрике
+$L_\infty$. Полученный метод позволяет свести задачу к алгоритму двойчного
+поиска на отрезке действительных чисел, на каждом шаге которого применяются
+алгоритмы, имеющие гарантированную вычислительную сложность (построение
+выпуклой оболочки, задача обнаружений пересечения отрезка и многогранника,
+линейные преобразования).
+Более того, как будет показано далее, данный алгоритм имеет
+гарантированную (квадратичную) скорость сходимости при любых входных данных,
+какую метод внутренней точки позволял иметь лишь при выполнении большого ряда
+ограничений на входные данные.
+
+Также представлены результаты реализации и тестирования алгоритма,
+подтверждающие теоретически доказанные оценки и демонстирующие приемлемую
+производительность на ряде примеров, полученных из эмпирических данных
+для восстановления тела по его теневым контурам.
+
+\textbf{2. Основные понятия.}
 \begin{SmartDefinition}
  \label{def:support-function}
  \textbf{Опорной функцией} выпуклого тела $K \subset \mathbb{R}^{n}$
@@ -122,7 +204,7 @@ $L_{2}, L_{1}, L_{\infty}$),
 имеющей нормаль $u_{i}$.
 
 
-\textbf{2. Быстрый алгоритм согласования.}
+\textbf{3. Быстрый алгоритм согласования.}
 Основным результатом работы \cite{palachev} является следующая теорема:
 
 \begin{SmartTheorem}\label{theorem:exhaustive-conditions}
@@ -259,7 +341,7 @@ $u_i, i = 1, \ldots, n$ на сфере возможно построение т
 за линейное время \cite{Attali}, что позволило бы говорить о
 линейно-логарифмической сложности алгоритма.
 
-\textbf{3. Реализация и тестирование алгоритма}.
+\textbf{4. Реализация и тестирование алгоритма}.
 Алгоритм был реализован на основе библиотеки алгоритмов вычислительной
 геометрии CGAL \cite{cgal}. Пересечение полупространств в пункте 1 и выпуклая
 оболочка в пункте 5 вычислялись на основе алгоритма построения трехмерной
@@ -296,9 +378,9 @@ $u_i, i = 1, \ldots, n$ на сфере возможно построение т
 2 статьи \cite{WachterBiegler2}, из которой о скорости сходимости ничего не
 известно.
 
-Таким образом, предлагающийся метод, позволяющий за квадратичное время
+Таким образом, предлагающийся метод, позволяет за квадратичное время
 гарантированно получить решение задачи (\ref{equation:infinity-problem}),
-имеет право на существование, по сравнению с методом внутренней точки, про
+в отличие от метода внутренней точки, про
 скорость сходимости которого применительно к задаче
 (\ref{equation:infinity-problem}) содержательных оценок пока не имеется.
 
@@ -359,27 +441,6 @@ IEEE Transactions on Pattern Analysis and Machine Intelligence.
 N 3.
 556--562.
 
-\bibitem{Devillers}
-\emph{Devillers~O.}
-The Delaunay Hierarchy //
-International Journal of Foundations of Computer Science,
-World Scientific Publishing.
-2002.
-\textbf{13}.
-163--180.
-
-\bibitem{Attali}
-\emph{Attali~D., Boissonnat~J.-D.}
-A linear bound on the complexity of the Delaunay triangulation of points on
-polyhedral surfaces //
-Proceedings of the Seventh ACM Symposium on Solid Modeling and Applications.
-2002.
-139--146.
-
-\bibitem{cgal}
-\textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary.
-\url{http://www.cgal.org}
-
 \bibitem{Ipopt}
 \emph{Wachter~A., Biegler~L.T.}
 On the implementation of a primal-dual interior point filter line search
@@ -408,6 +469,28 @@ SIAM Journal on Optimization.
 \textbf{16}.
 N 1.
 1--31
+
+\bibitem{Devillers}
+\emph{Devillers~O.}
+The Delaunay Hierarchy //
+International Journal of Foundations of Computer Science,
+World Scientific Publishing.
+2002.
+\textbf{13}.
+163--180.
+
+\bibitem{Attali}
+\emph{Attali~D., Boissonnat~J.-D.}
+A linear bound on the complexity of the Delaunay triangulation of points on
+polyhedral surfaces //
+Proceedings of the Seventh ACM Symposium on Solid Modeling and Applications.
+2002.
+139--146.
+
+\bibitem{cgal}
+\textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary.
+\url{http://www.cgal.org}
+
 \end{thebibliography}
 
 \end{document}
